# practice_style_checking

./: 1-setup.bat  2-copy.bat  3-cmake.bat  4-build-vs2022.bat  README.md
clang-style-checker/: CMakeLists.txt  ClangStyleChecker.cpp
